// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> should render component when can back 1`] = `
<header
  className="sc-htpNat iMjwSP"
>
  <div
    className="sc-bdVaJa gMhnDS"
    onMouseDown={[Function]}
  >
    <i
      className="material-icons sc-ifAKCX gnWGZx"
      color="#a9a9a980"
      data-test="back"
      onClick={[MockFunction]}
    >
      arrow_back
    </i>
  </div>
  <h1
    className="sc-bxivhb eRKIhe"
  >
    百人一首 - 
    This is subtitle
     -
  </h1>
</header>
`;

exports[`<Header /> should render component when can not back 1`] = `
<header
  className="sc-htpNat krusbc"
>
  <h1
    className="sc-bxivhb eRKIhe"
  >
    百人一首 - 
    This is subtitle
     -
  </h1>
</header>
`;
